# gtk2hs

./: .gitignore  .travis.yml  APICHANGES  AUTHORS  ChangeLog  Gtk2Hs-DG.tex  INSTALL  Makefile  Makefile.am  OLD_TODO  RELEASING  Readme.md  TODO  VERSION  acinclude.m4  aclocal.m4  bootstrap.sh  boring  cabal.project  configure.ac  configure.in  default.nix  flake.nix  gtk2hs.iss.in  gtk2hs.spec.in  install-both.sh  package.sh  recordpatch.sh  shell.nix  sources.txt
cairo/: Gtk2HsSetup.hs  Setup.hs  SetupMain.hs  SetupWrapper.hs  cairo.cabal  cairo.cabal.in  cairo.h  cairo.package.conf.in  cairo.pkg.in
cairo/demo/: CairoGhci.hs  Clock.hs  ClockGtk3.hs  DrawingGtk3.hs
gconf/: Makefile  gconf.cabal  gconf.cabal.in  gconf.package.conf.in  gconf.pkg.in  marshal.list
gconf/demo/: Makefile
gio/: .gitignore  Gtk2HsSetup.hs  Setup.hs  SetupMain.hs  SetupWrapper.hs  gio.cabal  gio.cabal.in  gio.package.conf.in  hierarchy.list  marshal.list
gio/System/: GIO.hs
gio/demo/: FileManager.hs  Makefile
glade/: Glade.chs  Makefile  glade.cabal  glade.cabal.in  glade.package.conf.in  glade.pkg.in
glib/: Gtk2HsSetup.hs  Setup.hs  SetupMain.hs  SetupWrapper.hs  glib.cabal  glib.cabal.in  glib.package.conf.in  glib.pkg.in
glib/System/: Glib.hs
gnomevfs/: Gtk2HsSetup.hs  gnomevfs.cabal  gnomevfs.cabal.in  gnomevfs.h  gnomevfs.package.conf.in  gnomevfs.pkg.in  hsgnomevfs-2.14.h  marshal.list
gnomevfs/demo/: TestDriveVolume.hs  TestSync.hs  TestVolumeMonitor.hs
gstreamer/: gobject-hierarchy.list  gstreamer.cabal  gstreamer.cabal.in  gstreamer.package.conf.in  gstreamer.pkg.in  hierarchy.list  hsgstreamer.c  hsgstreamer.h  marshal.list  mini-hierarchy.list
gstreamer/demo/: Makefile  VorbisPlay.hs
gtk/: Gtk2HsSetup.hs  Makefile  Setup.hs  SetupMain.hs  SetupWrapper.hs  gtk.cabal  gtk.cabal-0  gtk.cabal-3  gtk.cabal-renamed  gtk.cabal.in  gtk.package.conf.in  gtk.pkg.in  gtk2hs.pkg.in  gtk3.cabal  hierarchy.list  hierarchy3.list  hsgtk.h  install-both.sh  marshal.list  wingtk.h
gtk/abstract/: Bin.chs  Box.chs  ButtonBox.chs  ButtonBox.chs.cpp  ButtonBox.chs.pp  ButtonBox.chspp  Container.chs  FileChooser.chs  FileChooser.chs.cpp  Misc.chs  Object.chs  Object.chs.cpp  Object.chs.pp  Object.chspp  Paned.chs  Paned.chs.cpp  Paned.chs.pp  Paned.chspp  Range.chs  Scale.chs  Scrollbar.hs  Separator.hs  Widget.chs  api.ignore
gtk/buttons/: Button.chs  Button.chs.cpp  Button.chs.pp  Button.chspp  CheckButton.chs  RadioButton.chs  ToggleButton.chs  api.ignore
gtk/demo/: demos.txt
gtk/display/: AccelLabel.chs  Image.chs  Label.chs  ProgressBar.chs  Statusbar.chs  api.ignore
gtk/embedding/: Embedding.hsc  Plug.chs  Socket.chs  api.ignore
gtk/entry/: Editable.chs  Editable.chspp  Entry.chs  Entry.chs.cpp  Entry.chs.pp  Entry.chspp  EntryCompletion.chs  EntryCompletion.chs.pp  HScale.chs  SpinButton.chs  VScale.chs  api.ignore
gtk/gdk/: DrawWindow.hs  Drawable.chs  Drawable.chs.cpp  Drawable.chs.pp  Drawable.chspp  Events.hsc  GC.chs  Gdk.chs  GdkDrawable.chs  GdkEnums.chs  GdkGC.chs  GdkKeys.chs  Keys.chs  Pixbuf.chs  Region.chs  Region.chs.cpp  Region.chs.pp  Region.chspp
gtk/general/: Enums.chs  Enums.chs.cpp  Enums.chs.pp  Enums.chspp  FFI.hs  General.chs  Gtk.hs  IconFactory.chs  IconFactory.chs.cpp  IconFactory.chs.pp  IconFactory.chspp  StockItems.hsc  Structs.hsc  Style.chs  UTFCForeign.hs  api.ignore
gtk/glib/: GError.chs  GError.chs.cpp  GList.chs  GObject.chs  GObject.chs.cpp  GObject.chs.pp  GObject.chspp  GParameter.hsc  GType.chs  GValue.chs  GValueTypes.chs  valueaccess.h
gtk/layout/: Alignment.chs  Alignment.chs.cpp  Alignment.chs.pp  Alignment.chspp  AspectFrame.chs  Expander.chs  Expander.chspp  Fixed.chs  HBox.chs  HButtonBox.chs  HPaned.chs  Layout.chs  Notebook.chs  Notebook.chs.cpp  Notebook.chs.pp  Notebook.chspp  Table.chs  VBox.chs  VButtonBox.chs  VPaned.chs  api.ignore
gtk/menuComboToolbar/: CheckMenuItem.chs  CheckMenuItem.chs.cpp  CheckMenuItem.chs.pp  CheckMenuItem.chspp  Combo.chs  Combo.chs.cpp  Combo.chs.pp  Combo.chspp  ComboBox.chs  ComboBox.chs.cpp  ComboBoxEntry.chs  ComboBoxEntry.chspp  ImageMenuItem.chs  Menu.chs  Menu.chs.cpp  Menu.chs.pp  Menu.chspp  MenuBar.chs  MenuItem.chs  MenuShell.chs  OptionMenu.chs  OptionMenu.chs.cpp  OptionMenu.chs.pp  OptionMenu.chspp  RadioMenuItem.chs  TearoffMenuItem.chs  ToolItem.chs  ToolItem.chs.cpp  Toolbar.chs  Toolbar.chs.cpp  Toolbar.chs.pp  Toolbar.chspp  api.ignore
gtk/misc/: Adjustment.chs  Arrow.chs  Calendar.chs  Calendar.chs.cpp  Calendar.chs.pp  Calendar.chspp  DrawingArea.chs  EventBox.chs  EventBox.chs.cpp  EventBox.chs.pp  EventBox.chspp  FileChooserWidget.chs  FileChooserWidget.chspp  GArrow.chs  HandleBox.chs  SizeGroup.chs  Tooltips.chs  Tooltips.chs.cpp  Tooltips.chs.pp  Tooltips.chspp  Viewport.chs  api.ignore
gtk/multiline/: TextBuffer.chs  TextIter.chs  TextIter.chs.cpp  TextIter.chs.pp  TextIter.chspp  TextMark.chs  TextTag.chs  TextTag.chspp  TextTagTable.chs  TextView.chs
gtk/ornaments/: Frame.chs  HSeparator.chs  VSeparator.chs
gtk/pango/: Description.chs  Markup.hs  PangoEnums.chs  PangoLayout.chs  PangoTypes.chs  PangoTypes.chs.cpp  PangoTypes.chs.pp  PangoTypes.chspp  Rendering.chs
gtk/scrolling/: HScrollbar.chs  ScrolledWindow.chs  VScrollbar.chs
gtk/selectors/: ColorSelection.chs  FontSelection.chs  (+3 more)
gtkglext/: Gtk2HsSetup.hs  gtkglext.cabal  gtkglext.cabal.in  gtkglext.package.conf.in  gtkglext.pkg.in
gtksourceview2/: gtksourceview2.cabal  gtksourceview2.cabal.in  gtksourceview2.h  gtksourceview2.package.conf.in  marshal.list
pango/: Gtk2HsSetup.hs  Setup.hs  SetupMain.hs  SetupWrapper.hs  hierarchy.list  hspango.h  pango.cabal  template-hsc-gtk2hs.h
soegtk/: Setup.hs  soegtk.cabal  soegtk.cabal.in  soegtk.package.conf.in  soegtk.pkg.in
svgcairo/: svgcairo.cabal  svgcairo.cabal.in  svgcairo.h  svgcairo.package.conf.in  svgcairo.pkg.in
tools/: COPYING  checkDirs.sh  gtk2hs-buildtools.cabal
vte/: marshal.list  vte.cabal  vte.cabal.in  vte.package.conf.in
webkit/: hswebkit.h  marshal.list  webkit.cabal  webkit.cabal.in  webkit.package.conf.in
(+1429 files in other folders)
